# iced-battery-status

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  dev.mariinkys.BatteryStatus.json  justfile
i18n/en/: battery_status.ftl
i18n/es/: battery_status.ftl
i18n/nl/: battery_status.ftl
resources/: dev.mariinkys.BatteryStatus.desktop  dev.mariinkys.BatteryStatus.metainfo.xml
src/: config.rs  i18n.rs  main.rs  theme.rs  window.rs  window_old_copy.rs
